smooth scrolling added and fixed navbar sticky issue on safari

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,9 @@ p {
 }
 /* Nav Bar */
 
+.logo {
+    letter-spacing: 1.4px;
+}
 
 #navbar {
     background: #333;
@@ -122,7 +125,9 @@ p {
     justify-content: space-between;
     z-index: 99999;
     padding: 1rem;
+    position: -webkit-sticky;
 }
+
 
 #navbar ul {
     display: flex;
@@ -160,7 +165,7 @@ p {
     padding: 0 2rem;
     /*Overlay*/
     position: absolute;
-    top: 60px;
+    top: 65px;
     left: 0;
     right: 0;
     bottom: 0;
